@@ -2,6 +2,14 @@
 
 	* src/preproc/html/pre-html.cpp: Refactor.  Drop unnecessary
 	prototype for static function.
+	(char_buffer::read_file): Demote return type from `int` to
+	`void`.  Stop returning after calling functions that don't
+	return.  Call `sys_fatal()` if `fread()` returns an error,
+	similarly to other calls into the standard C library that this
+	file makes.  Improve check for error from `fread()` by not
+	regarding a return value of zero when the end-of-file indicator
+	is set as an error condition.
+	(do_file): Drop conditional with empty consequent.
 
 2022-06-27  G. Branden Robinson <g.branden.robinson@gmail.com>
 
